--- a/home_page/home.html
+++ b/home_page/home.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link css -->
-     <link rel="stylesheet" href="./css/home.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- link css -->
+        <link rel="stylesheet" href="./css/home.css" />
+        <title>Document</title>
+    </head>
+    <body></body>
 </html>
