--- a/treino/treino.html
+++ b/treino/treino.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Link para o CSS -->
-     <link rel="stylesheet" href="./css/treino.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Link para o CSS -->
+        <link rel="stylesheet" href="./css/treino.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <main>
+            <h1>Treino</h1>
+        </main>
+    </body>
 </html>
