--- a/conatcto/contacto.html
+++ b/conatcto/contacto.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link css  -->
-    <link rel="stylesheet" href="./css/contacto.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>teste</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- link css  -->
+        <link rel="stylesheet" href="./css/contacto.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <main>
+            <h1>Contacto</h1>
+        </main>
+    </body>
 </html>
