--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>teste</h1>
-    <h1>Funcionou</h1>
+    <main>
+        <h1>Home</h1>
+    </main>
 </body>
 </html>
