--- a/index.html
+++ b/index.html
@@ -1,15 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link css  -->
-    <link rel="stylesheet" href="./home_page/css/home.css">
-    <title>Document</title>
-</head>
-<body>
-    <main>
-        <h1>Home</h1>
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Link bootstrap -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+            integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <!-- Font Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+            integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <!-- link css  -->
+        <link rel="stylesheet" href="./home_page/css/home.css" />
+        <!-- link favicon   -->
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <title>Document</title>
+    </head>
+    <body>
+        <!-- Nav -->
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <img src="./home_page/img/logo.png" alt="logo" />
+            </div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Planos</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contactos</a></li>
+                    <li>
+                        <a href="#"><button>Iniciar sessão</button></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="language-container">
+                <ul>
+                    <li><a href="#">PT</a></li>
+                    <li><a href="#">EN</a></li>
+                </ul>
+            </div>
+        </nav>
+        <main></main>
+        <!-- Footer -->
+        <footer class="footer-container">
+            <div class="first-section">
+                <div class="title-container">
+                    <h4>
+                        Assine a nossa newsletter e fique por dentro de todas as
+                        novidades!
+                    </h4>
+                </div>
+                <div class="input-container">
+                    <input type="email" placeholder="Email" />
+                    <button>Subscreva</button>
+                </div>
+            </div>
+            <div class="second-container">
+                <div class="social-container">
+                    <div>
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="social-text-container">
+                        <p>
+                            Segunda a Sábado: 06:00 às 00:00 <br />
+                            Domingo: 08:00 às 16:00 <br />
+                            Feriados: Fechado
+                        </p>
+                    </div>
+                </div>
+                <div class="Link-footer-container">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Planos</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Contactos</a></li>
+                        <li><a href="#">Carreira</a></li>
+                        <li><a href="#">Novidades</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <!-- link bootstrap js -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
+            integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+    </body>
 </html>
