--- a/index.html
+++ b/index.html
@@ -19,49 +19,60 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <!-- Fonte -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <!-- link css  -->
         <link rel="stylesheet" href="./home_page/css/home.css" />
         <!-- link favicon   -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-        <title>Document</title>
+        <title>Homepage</title>
     </head>
     <body>
         <!-- Nav -->
-        <nav class="nav-container">
-            <div class="nav-logo">
-                <img src="./home_page/img/logo.png" alt="logo" />
-            </div>
-            <div class="nav-menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Planos</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contactos</a></li>
-                    <li>
-                        <a href="#"><button>Iniciar sessão</button></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="language-container">
-                <ul>
-                    <li><a href="#">PT</a></li>
-                    <li><a href="#">EN</a></li>
-                </ul>
-            </div>
-        </nav>
+        <header class="header-container">
+            <nav class="nav-container">
+                <div class="nav-logo">
+                    <img src="./home_page/img/logomarca.svg" alt="logo" />
+                </div>
+                <div class="nav-link">
+                    <ul>
+                        <li><a href="#">Homepage</a></li>
+                        <li><a href="#">Planos</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contactos</a></li>
+                    </ul>
+                    <div class="button">
+                        <a href="#"
+                            ><button id="start-session">
+                                Iniciar sessão
+                            </button></a
+                        >
+                    </div>
+                    <div class="language-container">
+                        <span id="pt">PT</span>
+                        <span id="en">EN</span>
+                    </div>
+                </div>
+            </nav>
+        </header>
         <main></main>
         <!-- Footer -->
         <footer class="footer-container">
             <div class="first-section">
-                <div class="title-container">
-                    <h4>
-                        Assine a nossa newsletter e fique por dentro de todas as
-                        novidades!
-                    </h4>
-                </div>
-                <div class="input-container">
-                    <input type="email" placeholder="Email" />
-                    <button>Subscreva</button>
+                <div class="first-section-container">
+                    <div class="title-container">
+                        <h4>
+                            Assine a nossa newsletter e fique por dentro de todas as
+                            novidades!
+                        </h4>
+                    </div>
+                    <div class="input-container">
+                        <i class="fas fa-user"></i>
+                        <input class type="email" placeholder="Escreva o seu email" />
+                        <button>Subscreva</button>
+                    </div>
                 </div>
             </div>
             <div class="second-container">
