--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         />
         <!-- link css  -->
         <link rel="stylesheet" href="./home_page/css/home_share.css" />
-        <link rel="stylesheet" href="./home_page/css/home_mobile.css">
+        <link rel="stylesheet" href="./home_page/css/home_mobile.css" />
         <!-- link favicon   -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <title>Homepage</title>
@@ -88,7 +88,9 @@
             <div class="second-container">
                 <div class="social-container">
                     <div id="social-icons">
-                        <span><i class="fa-brands fa-square-facebook"></i></span>
+                        <span
+                            ><i class="fa-brands fa-square-facebook"></i
+                        ></span>
                         <span><i class="fa-brands fa-instagram"></i></span>
                         <span><i class="fa-regular fa-envelope"></i></span>
                     </div>
