--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <div class="nav-logo">
                     <img src="./home_page/img/logomarca.svg" alt="logo" />
                 </div>
+                <div class="hamburguer-container">
+                    <button class="btn-hamburguer">Menu</button>
+                </div>
                 <div class="nav-link">
                     <ul>
                         <li><a href="#">Homepage</a></li>
@@ -120,6 +123,8 @@
                 </div>
             </div>
         </footer>
+        <!-- Link JavaScript -->
+        <script src="./home_page/js/home.js"></script>
         <!-- link bootstrap js -->
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
