--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                 <div class="nav-logo">
                     <img src="./home_page/img/logomarca.svg" alt="logo" />
                 </div>
-                <div class="hamburguer-container">
-                    <button class="btn-hamburguer">Menu</button>
+                <div class="hamburger-container">
+                    <button class="btn-hamburger">
+                        <span id="hamburger"></span></button>
                 </div>
                 <div class="nav-link">
                     <ul>
