--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="hamburger-container">
                     <button class="btn-hamburger">
-                        <span id="hamburger"></span></button>
+                        <div id="hamburger"></div></button>
                 </div>
                 <div class="nav-link">
                     <ul>
