fix menu hamburguer

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                     </div>
                 </div>
             </div>
+            <div class="copy-container">
+                <div class="copy">
+                    <p id="order2">© 2024  Shape Up, All rights reserved.</p>
+                    <ul>
+                        <li><a href="#"></a>Termos & Condições</li>
+                        <li><a href="#"></a>Política de Privacidade</li>
+                        <li><a href="#"></a>Cookies</li>
+                    </ul>
+                </div>
+            </div>
         </footer>
         <!-- Link JavaScript -->
         <script src="./home_page/js/home.js"></script>
