finished  mobile version

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         <link rel="stylesheet" href="./home_page/css/home_share.css" />
         <link rel="stylesheet" href="./home_page/css/home_mobile.css" />
         <!-- link favicon   -->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link
+            rel="shortcut icon"
+            href="./home_page/img/favicon.svg"
+            type="image/x-icon"
+        />
         <title>Homepage</title>
     </head>
     <body>
@@ -42,17 +46,20 @@
                 </div>
                 <div class="hamburger-container">
                     <button class="btn-hamburger">
-                        <div id="hamburger"></div></button>
+                        <div id="hamburger"></div>
+                    </button>
                 </div>
                 <div class="nav-link">
                     <ul>
-                        <li><a href="#">Homepage</a></li>
-                        <li><a href="#">Planos</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contactos</a></li>
+                        <li><a href="./index.html">Homepage</a></li>
+                        <li><a href="./treino/treino.html">Planos</a></li>
+                        <li><a href="./blog/blog.html">Blog</a></li>
+                        <li>
+                            <a href="./contacto/contacto.html">Contactos</a>
+                        </li>
                     </ul>
                     <div class="button">
-                        <a href="#"
+                        <a href="/"
                             ><button id="start-session">
                                 Iniciar sessão
                             </button></a
@@ -109,27 +116,29 @@
                 <div class="link-footer-container">
                     <div class="link-footer">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Planos</a></li>
-                            <li><a href="#">Blog</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./treino/treino.html">Planos</a></li>
+                            <li><a href="./blog/blog.html">Blog</a></li>
                         </ul>
                     </div>
                     <div class="link-footer">
                         <ul>
-                            <li><a href="#">Contactos</a></li>
-                            <li><a href="#">Carreira</a></li>
-                            <li><a href="#">Novidades</a></li>
+                            <li>
+                                <a href="./contacto/contacto.html">Contactos</a>
+                            </li>
+                            <li><a href="/">Carreira</a></li>
+                            <li><a href="/">Novidades</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="copy-container">
                 <div class="copy">
-                    <p id="order2">© 2024  Shape Up, All rights reserved.</p>
+                    <p id="order2">© 2024 Shape Up, All rights reserved.</p>
                     <ul>
-                        <li><a href="#"></a>Termos & Condições</li>
-                        <li><a href="#"></a>Política de Privacidade</li>
-                        <li><a href="#"></a>Cookies</li>
+                        <li><a href="/"></a>Termos & Condições</li>
+                        <li><a href="/"></a>Política de Privacidade</li>
+                        <li><a href="/"></a>Cookies</li>
                     </ul>
                 </div>
             </div>
