--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -33,7 +33,7 @@
         <!-- link favicon   -->
         <link
             rel="shortcut icon"
-            href="./home_page/img/favicon.svg"
+            href="../home_page/img/favicon.svg"
             type="image/x-icon"
         />
         <title>Contacto</title>
@@ -43,7 +43,7 @@
         <header class="header-container">
             <nav class="nav-container">
                 <div class="nav-logo">
-                    <img src="./home_page/img/logomarca.svg" alt="logo" />
+                    <img src="../home_page/img/logomarca.svg" alt="logo" />
                 </div>
                 <div class="hamburger-container">
                     <button class="btn-hamburger">
