--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <!-- link css  -->
         <link rel="stylesheet" href="./home_page/css/home_share.css" />
         <link rel="stylesheet" href="./home_page/css/home_mobile.css" />
+        <link rel="stylesheet" href="./home_page/css/home.css">
         <!-- link favicon   -->
         <link
             rel="shortcut icon"
@@ -73,7 +74,11 @@
             </nav>
         </header>
         <main class="main-container">
-            <!--  Espaço destinado ao conteudo centrald das páginas-->
+            <section class="title-container">
+                <h1>
+                    Mais do que treino, é um estilo de vida.
+                </h1>
+            </section>
         </main>
         <!-- Footer -->
         <footer class="footer-container">
