--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- link css  -->
         <link rel="stylesheet" href="./home_page/css/home_share.css" />
         <link rel="stylesheet" href="./home_page/css/home_mobile.css" />
-        <link rel="stylesheet" href="./home_page/css/home.css">
+        <link rel="stylesheet" href="./home_page/css/home.css" />
         <!-- link favicon   -->
         <link
             rel="shortcut icon"
@@ -75,9 +75,7 @@
         </header>
         <main class="main-container">
             <section class="title-container">
-                <h1>
-                    Mais do que treino, é um estilo de vida.
-                </h1>
+                <h1>Mais do que treino, é um estilo de vida.</h1>
             </section>
         </main>
         <!-- Footer -->
