--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- link css  -->
         <link rel="stylesheet" href="./home_page/css/home_share.css" />
         <link rel="stylesheet" href="./home_page/css/home_mobile.css" />
-        <link rel="stylesheet" href="./home_page/css/home.css">
+        <link rel="stylesheet" href="./home_page/css/home.css" />
         <!-- link favicon   -->
         <link
             rel="shortcut icon"
@@ -74,10 +74,32 @@
             </nav>
         </header>
         <main class="main-container">
+            <!-- Section title text -->
             <section class="title-container">
-                <h1>
-                    Mais do que treino, é um estilo de vida.
-                </h1>
+                <h1>Mais do que treino, é um estilo de vida.</h1>
+            </section>
+            <section class="number-container">
+                <div class="numbers-container">
+                    <div id="first-number">
+                            <h1 id="number-one">0</h1>
+                            <h4>Vidas Transformadas</h4>
+                    </div>
+                    <div id="second-number">
+                            <h1>0</h1>
+                            <h4>Profissionais Qualificados</h4>
+                    </div>
+                </div>
+                <dir class="numbers-container">
+                    <div id="third-number">
+                            <h1>0</h1>
+                            <h4>Anos 
+                                de Serviço</h4>
+                    </div>
+                    <div id="fourth-number">
+                            <h1>3</h1>
+                            <h4>Pacotes pensados para todos</h4>
+                        </div>
+                </dir>
             </section>
         </main>
         <!-- Footer -->
