--- a/index.html
+++ b/index.html
@@ -73,33 +73,84 @@
                 </div>
             </nav>
         </header>
-        <main class="main-container">
-            <!-- Section title text -->
-            <section class="title-container">
-                <h1>Mais do que treino, é um estilo de vida.</h1>
-            </section>
-            <section class="number-container">
-                <div class="numbers-container">
-                    <div id="first-number">
+        <main>
+            <section class="main-container">
+                <!-- Section title text -->
+                <section class="title-container">
+                    <h1>Mais do que treino, é um estilo de vida.</h1>
+                </section>
+                <!-- Section numbers -->
+                <section class="number-container">
+                    <div class="numbers-container">
+                        <div id="first-number">
                             <h1 id="number-one">0</h1>
                             <h4>Vidas Transformadas</h4>
-                    </div>
-                    <div id="second-number">
+                        </div>
+                        <div id="second-number">
                             <h1>0</h1>
                             <h4>Profissionais Qualificados</h4>
+                        </div>
                     </div>
-                </div>
-                <dir class="numbers-container">
-                    <div id="third-number">
+                    <dir class="numbers-container">
+                        <div id="third-number">
                             <h1>0</h1>
-                            <h4>Anos 
-                                de Serviço</h4>
-                    </div>
-                    <div id="fourth-number">
+                            <h4>Anos de Serviço</h4>
+                        </div>
+                        <div id="fourth-number">
                             <h1>3</h1>
                             <h4>Pacotes pensados para todos</h4>
                         </div>
-                </dir>
+                    </dir>
+                </section>
+                <section class="title">
+                    <h3>Galeria</h3>
+                </section>
+            </section>
+            <!-- Section Galeria -->
+            <section class="galeria-container">
+                <div
+                id="carouselExampleControls"
+                class="carousel slide"
+                data-bs-ride="carousel"
+                >
+                <div class="btn-galery">
+                    <button
+                        class="carousel-control-prev btn-carousel"
+                        type="button"
+                        data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev"
+                    >
+                        <span
+                            class="carousel-control-prev-icon"
+                            aria-hidden="true"
+                        ></span>
+                        <span >Anterio</span>
+                    </button>
+                    <button
+                        class="carousel-control-next btn-carousel"
+                        type="button"
+                        data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next"
+                    >
+                    <span>Próximo</span>
+                        <span
+                            class="carousel-control-next-icon"
+                            aria-hidden="true"
+                        ></span>
+                    </button>
+                </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./home_page/img/courossel_img/01.png" class="d-block w-100" alt="..." />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./home_page/img/courossel_img/02.png" class="d-block w-100" alt="..." />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../home_page/img/courossel_img/03.png" class="d-block w-100" alt="..." />
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <!-- Footer -->
