--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             class="carousel-control-prev-icon"
                             aria-hidden="true"
                         ></span>
-                        <span >Anterio</span>
+                        <span >Anterior</span>
                     </button>
                     <button
                         class="carousel-control-next btn-carousel"
