--- a/index.html
+++ b/index.html
@@ -109,48 +109,169 @@
             <!-- Section Galeria -->
             <section class="galeria-container">
                 <div
-                id="carouselExampleControls"
-                class="carousel slide"
-                data-bs-ride="carousel"
+                    id="carouselExampleControls"
+                    class="carousel slide"
+                    data-bs-ride="carousel"
                 >
-                <div class="btn-galery">
-                    <button
-                        class="carousel-control-prev btn-carousel"
-                        type="button"
-                        data-bs-target="#carouselExampleControls"
-                        data-bs-slide="prev"
-                    >
-                        <span
-                            class="carousel-control-prev-icon"
-                            aria-hidden="true"
-                        ></span>
-                        <span >Anterior</span>
-                    </button>
-                    <button
-                        class="carousel-control-next btn-carousel"
-                        type="button"
-                        data-bs-target="#carouselExampleControls"
-                        data-bs-slide="next"
-                    >
-                    <span>Próximo</span>
-                        <span
-                            class="carousel-control-next-icon"
-                            aria-hidden="true"
-                        ></span>
-                    </button>
-                </div>
+                    <div class="btn-galery">
+                        <button
+                            class="carousel-control-prev btn-carousel"
+                            type="button"
+                            data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev"
+                        >
+                            <span
+                                class="carousel-control-prev-icon"
+                                aria-hidden="true"
+                            ></span>
+                            <span>Anterior</span>
+                        </button>
+                        <button
+                            class="carousel-control-next btn-carousel"
+                            type="button"
+                            data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next"
+                        >
+                            <span>Próximo</span>
+                            <span
+                                class="carousel-control-next-icon"
+                                aria-hidden="true"
+                            ></span>
+                        </button>
+                    </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./home_page/img/courossel_img/01.png" class="d-block w-100" alt="..." />
+                            <img
+                                src="./home_page/img/courossel_img/01.png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
                         </div>
                         <div class="carousel-item">
-                            <img src="./home_page/img/courossel_img/02.png" class="d-block w-100" alt="..." />
+                            <img
+                                src="./home_page/img/courossel_img/02.png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
                         </div>
                         <div class="carousel-item">
-                            <img src="../home_page/img/courossel_img/03.png" class="d-block w-100" alt="..." />
+                            <img
+                                src="../home_page/img/courossel_img/03.png"
+                                class="d-block w-100"
+                                alt="..."
+                            />
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="main-container">
+                <!-- Section title text -->
+                <section class="title">
+                    <h3>Feedback</h3>
+                </section>
+                <!-- Section feedback -->
+                <section class="feedback-container">
+                    <div
+                        id="carouselExampleControls2"
+                        class="carousel slide"
+                        data-bs-ride="carousel"
+                    >
+                        <div class="btn-feedback">
+                            <button
+                                class="carousel-control-prev btn-carousel"
+                                type="button"
+                                data-bs-target="#carouselExampleControls2"
+                                data-bs-slide="prev"
+                            >
+                                <span
+                                    class="carousel-control-prev-icon"
+                                    aria-hidden="true"
+                                ></span>
+                                <span>Anterior</span>
+                            </button>
+                            <button
+                                class="carousel-control-next btn-carousel"
+                                type="button"
+                                data-bs-target="#carouselExampleControls2"
+                                data-bs-slide="next"
+                            >
+                                <span>Próximo</span>
+                                <span
+                                    class="carousel-control-next-icon"
+                                    aria-hidden="true"
+                                ></span>
+                            </button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="feedback-container">
+                                    <div id="feedback-img">
+                                        <img
+                                            src="./home_page/img/feedback_img/01.png"
+                                            alt="feedbackimg"
+                                        />
+                                    </div>
+                                    <div id="feedback-text">
+                                        <h3>
+                                            “Adorei o conceito do ShapeUp! A
+                                            privacidade e o foco no cliente
+                                            criam uma atmosfera única, longe das
+                                            distrações típicas de ginásios
+                                            convencionais. Após algumas semanas
+                                            de treino, já percebo resultados
+                                            consistentes e uma maior confiança
+                                            em mim mesmo.”
+                                        </h3>
+                                        <p>— Vagner Oliveira, 2024</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="feedback-container">
+                                    <div id="feedback-img">
+                                        <img
+                                            src="./home_page/img/feedback_img/02.png"
+                                            alt="feedbackimg"
+                                        />
+                                    </div>
+                                    <div id="feedback-text">
+                                        <h3>
+                                            "ShapeUp! transformou a minha
+                                            rotina. Com o atendimento
+                                            personalizado e o ambiente
+                                            exclusivo, consegui alcançar
+                                            objetivos que antes pareciam
+                                            impossíveis. Estou mais saudável e
+                                            com mais energia no meu dia a dia."
+                                        </h3>
+                                        <p>— Elsa Gonçalves, 2024</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="feedback-container">
+                                    <div id="feedback-img">
+                                        <img
+                                            src="./home_page/img/feedback_img/03.png"
+                                            alt="feedbackimg"
+                                        />
+                                    </div>
+                                    <div id="feedback-text">
+                                        <h3>
+                                            "Treinar no ShapeUp! foi um divisor
+                                            de águas para mim. Além do espaço
+                                            incrível, os profissionais são
+                                            extremamente atenciosos. Sinto-me
+                                            mais confiante e motivado todos os
+                                            dias!"
+                                        </h3>
+                                        <p>— Ricardo Almeida, 2024</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
         </main>
         <!-- Footer -->
