--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                     </div>
                 </section>
             </section>
+            <h1>Teste de Merge</h1>
         </main>
         <!-- Footer -->
         <footer class="footer-container">
