--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         </div>
                         <div class="carousel-item">
                             <img
-                                src="../home_page/img/courossel_img/03.png"
+                                src="./home_page/img/courossel_img/03.png"
                                 class="d-block w-100"
                                 alt="..."
                             />
