finished banner container

--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@
                         </div>
                     </div>
                 </section>
+                <section class="banner-container">
+                        <h3>Junta-te a nós no próximo dia 24 de Janeiro para um desafio cycling.</h3>
+                        <button id="btn-banner">Inscreve-te aqui</button>
+                </section>
             </section>
         </main>
         <!-- Footer -->
