fix favicon and heigth buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- link favicon   -->
         <link
             rel="shortcut icon"
-            href="./home_page/img/favicon.svg"
+            href="./home_page/img/favicon.png"
             type="image/x-icon"
         />
         <title>Homepage</title>
@@ -395,9 +395,9 @@
                 <div class="copy">
                     <p id="order2">© 2024 Shape Up, All rights reserved.</p>
                     <ul>
-                        <li><a href="/"></a>Termos & Condições</li>
-                        <li><a href="/"></a>Política de Privacidade</li>
-                        <li><a href="/"></a>Cookies</li>
+                        <li><a href="#">Termos & Condições</a></li>
+                        <li><a href="/">Política de Privacidade</a></li>
+                        <li><a href="/">Cookies</a></li>
                     </ul>
                 </div>
             </div>
